<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home_title" />

    <item
        android:id="@+id/lessonsFragment"
        android:icon="@drawable/ic_book"
        android:title="@string/home_lessons" />

    <item
        android:id="@+id/quizzesFragment"
        android:icon="@drawable/ic_quiz"
        android:title="@string/home_quizzes" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_title" />
    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/ic_news"
        android:title="Notícias" />

</menu>
